--- a/templates/prodottidellaricerca.html
+++ b/templates/prodottidellaricerca.html
@@ -49,6 +49,8 @@
                 <p>
                     Attraverso il protocollo <a href="https://www.openarchives.org/pmh/">OAI-PMH</a> è inoltre possibile accedere alle <a href="https://zenodo.org/oai2d?verb=ListRecords&set=user-bibliotecacapitolareveronaunivr&metadataPrefix=oai_dc">API per la raccolta dei metadati</a>.
                 </p>
+
+                <a class="btn btn-primary" href="https://zenodo.org/communities/bibliotecacapitolareveronaunivr/?page=1&size=20"> Vai alla lista dei prodotti open-access</a>
                 </div>
             <div class="col-lg-6 col-md-12 col-12">
                 <a href="https://zenodo.org/communities/bibliotecacapitolareveronaunivr/?page=1&size=20">
@@ -70,9 +72,14 @@
                 </p>
                 <p>
                 Curiamo un <a href="https://www.zotero.org/groups/3759014/capitolare-univr/library">database di riferimenti bibliografici aperto</a> 
-                ed inter-operabile basato su <a href="https://it.wikipedia.org/wiki/Zotero">Zotero</a> un software open-source per gestire i 
+                ed inter-operabile di riferimenti bibliografici riguardanti la Biblioteca Capitolare ed i beni contenuti al suo interno.
+                </p>
+                <p>
+                Il database è basato su <a href="https://it.wikipedia.org/wiki/Zotero">Zotero</a> un software open-source per gestire i 
                 riferimenti bibliografici.
                 </p>
+                <a class="btn btn-primary" href="https://www.zotero.org/groups/3759014/capitolare-univr/library"> Consulta la bibliografia</a>
+
                 </div>
             <div class="col-lg-6 col-md-12 col-12">
                 <a href="https://zenodo.org/communities/bibliotecacapitolareveronaunivr/?page=1&size=20">
