--- a/templates/includes/navbar2.html
+++ b/templates/includes/navbar2.html
@@ -26,7 +26,7 @@
             <li><a class="dropdown-item" href="/exploreapp">Catalogo storico A. Spangolo</a></li>
             <li><a class="dropdown-item" href="/archivioapp">Archivio delle pergamene</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/ricerca"">Ricerca nuovo catalogo</a></li>
+            <li><a class="dropdown-item" href="/ricerca">Ricerca nuovo catalogo</a></li>
           </ul>
         </li>
 <!--         <li class="nav-item active">
