WCAG adjustment, new image and

--- a/templates/altaformazione.html
+++ b/templates/altaformazione.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block  body%}
 
-<div class="container withnavbar">
+<div class="container withnavbar" id="content">
     <br>
     <div class="row">
         <div class="sidenav">
@@ -62,15 +62,15 @@
                         
               </div>
               <div class="img col-lg-6 col-md-12 col-12">
-                <img class="img-fluid" src={{url_for('static',filename='imgs/summerschool.jpeg')}}>
+                <img class="img-fluid" src={{url_for('static',filename='imgs/summerschool.jpeg')}} alt="Immagine di una parte di un manoscritto, con capitale miniata.">
             </div>
             </div>
           </section>
 
-        <section id="summerdante" class="illaboratorio  py-5 ">
+        <section id="summerdante" class="illaboratorio bg-white py-5 ">
             <div class="row align-items-center container py-5 mx-auto">
                 <div class="img col-lg-6 col-md-12 col-12">
-                    <img class="img-fluid" src={{url_for('static',filename='imgs/dantesummer.png')}} alt="Immagine del laboratorio, e del sistema di digitalizzazione.">   
+                    <img class="img-fluid" src={{url_for('static',filename='imgs/dantesummer.png')}} alt="Immagine della statua di Dante in Piazza dei Signori a Verona.">   
                   </div>
                   <div class="text col-lg-6 col-md-12 col-12">
                     <h6>SUMMER SCHOOL</h6>
@@ -146,7 +146,7 @@
                       </div>
                     
                       <div class="img col-lg-6 col-md-12 col-12">
-                        <img class="img-fluid" src=http://lezioni.meneghetti.univr.it//imageapi/41/m0041_0visn18_0012a1.jp2/pct:27.50,10.00,34.50,70.67/pct:30/0/default.jpg alt="Immagine del laboratorio, e del sistema di digitalizzazione.">   
+                        <img class="img-fluid" src=http://lezioni.meneghetti.univr.it//imageapi/41/m0041_0visn18_0012a1.jp2/pct:27.50,10.00,34.50,70.67/pct:30/0/default.jpg alt="Acquisizione di una parte del manoscritto 41 della biblioteca capitolare.">   
                       </div>
                     
                     </div>
