--- a/templates/bootstraptable2.html
+++ b/templates/bootstraptable2.html
@@ -29,7 +29,7 @@
 
 
 
-<div class="container">
+<div class="container" id="content">
 <div class="row">
    
 <div class="col-md-4">
@@ -42,10 +42,10 @@
  <br>
  <br>
  <h3>Ricerca avanzata</h3>
- <div class="alert alert-primary" role="alert">
-  La ricerca avanzata è basata sulla catalogazione dei beni secondo lo <a href="example.com">schema
-  proposto dal progetto Dascabida</a>.
-</div>
+  <!--  <div class="alert alert-primary" role="alert">
+    La ricerca avanzata è basata sulla catalogazione dei beni secondo lo <a href="example.com">schema
+    proposto dal progetto Dascabida</a>.
+  </div> -->
 <form  method="POST" action="">
 	{{ form.csrf_token }}
 <!-- 	<p>
