--- a/templates/exploreapp.html
+++ b/templates/exploreapp.html
@@ -2,7 +2,7 @@
 {% block  body%}
 <br>
 <br>
-<div class="container">
+<div class="container bg-white" id="content">
 <h4>Ricerca basata sui dati del Catalogo di don Spagnolo.</h1>
 
 <p>
