--- a/templates/layout.html
+++ b/templates/layout.html
@@ -67,7 +67,7 @@
 <!--  Example data spy   -->
 <!--     <body data-bs-spy="scroll" data-bs-target="#navbarCapi" data-bs-offset="150" tabindex="0">-->
 
-<body data-bs-offset="150" tabindex="0">
+<body data-bs-offset="150">
  <!--  <br> <br> -->
   <!-- <div class="alert alert-danger" role="alert">
     <p>
