--- a/templates/media.html
+++ b/templates/media.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block  body%}
 
-<div class="container withnavbar">
+<div class="container withnavbar" id="content">
     <br>
     <div class="row">
         <div class="sidenav">
@@ -52,12 +52,12 @@
                 </p>
                 </div>
             <div class="col-lg-6 col-md-12 col-12">
-                <img class="img-fluid" src={{url_for('static',filename='imgs/TG2.jpeg')}} alt="Basso rilevo che mostra un maestro con dei discepoli.">  
+                <img class="img-fluid" src={{url_for('static',filename='imgs/TG2.jpeg')}} alt="Immagine estratta dal servizio del TG2, durante l'intervista del prof. Pellegrini.">  
 
               </div>
             </div>
         </section>
-        <section id="tg3" class="illaboratorio  py-5 ">
+        <section id="tg3" class="illaboratorio  py-5 bg-white ">
             <div class="row align-items-center container py-5 mx-auto">
 
                   <div class="text col-lg-6 col-md-12 col-12">
@@ -68,7 +68,7 @@
                     </p>
                   </div>
                   <div class="img col-lg-6 col-md-12 col-12">
-                    <img class="img-fluid" src={{url_for('static',filename='imgs/TG3.jpeg')}} alt="Immagine del laboratorio, e del sistema di digitalizzazione.">   
+                    <img class="img-fluid" src={{url_for('static',filename='imgs/TG3.jpeg')}} alt="Immagine estratta dal servizio del TG3, durante la presentazione del progetto con Dr. Andrea Brugnoli, Prof. Arnaldo Soldani e Mons. Bruno Fasani.">   
                   </div>
                 </div>
               </section>
@@ -84,7 +84,7 @@
                 </div>
             <div class="col-lg-6 col-md-12 col-12">
                 <div class="embed-responsive embed-responsive-4by3">
-                <iframe class="embed-responsive-item" height="400px" width="100%" src="https://www.youtube.com/embed/Wkd58xpwdoQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" height="400px" width="100%" src="https://www.youtube.com/embed/Wkd58xpwdoQ" title="YouTube video player servizio di TelePace sul progetto." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 </div>
             </div>
