--- a/templates/privacypolicy.html
+++ b/templates/privacypolicy.html
@@ -1,6 +1,8 @@
 {% extends 'layout.html' %}
 {% block body %}
-
+<br>
+<br>
+<section class="storia  py-5 px-10">
 <h2>Privacy Policy</h2>
 <p><strong>Informativa ai sensi dell'art. 13 del Codice della Privacy</strong></p>
 <p><b>Ai sensi dell'articolo 13 del codice della D.Lgs. 196/2003, vi rendiamo le seguenti informazioni.</b></p>
@@ -55,10 +57,10 @@
 <h3>Finalità del trattamento</h3>
 <p>I dati possono essere raccolti per una o più delle seguenti finalità:</p>
 <ul>
-    <li>fornire l'accesso ad aree riservate del Portale e di Portali/siti collegati con il presente e all'invio di comunicazioni anche di carattere commerciale, notizie, aggiornamenti sulle iniziative di questo sito e delle società da essa controllate e/o collegate e/o Sponsor. </li>
+<!--     <li>fornire l'accesso ad aree riservate del Portale e di Portali/siti collegati con il presente e all'invio di comunicazioni anche di carattere commerciale, notizie, aggiornamenti sulle iniziative di questo sito e delle società da essa controllate e/o collegate e/o Sponsor. </li>
     <li>eventuale cessione a terzi dei suddetti dati, sempre finalizzata alla realizzazione di campagne di email marketing ed all'invio di comunicazioni di carattere commerciale. </li>
-    <li>eseguire gli obblighi previsti da leggi o regolamenti;</li>
-    <li>gestione contatti;</li>
+ -->    <li>eseguire gli obblighi previsti da leggi o regolamenti;</li>
+    <!-- <li>gestione contatti;</li> -->
 </ul>
 <h3>Modalità del trattamento</h3>
 <p>I dati verranno trattati con le seguenti modalità:</p>
@@ -73,9 +75,9 @@
     <h3>Soggetti a cui dati potranno essere comunicati i dati personali</h3>
     <p>I dati raccolti potranno essere comunicati a:</p>
     <ul>
-        <li>società e imprese per usi di direct mailing o attività analoghe;</li>
+<!--         <li>società e imprese per usi di direct mailing o attività analoghe;</li>
         <li>associazioni e fondazioni intenzionate ad acquistare spazi pubblicitari sulle liste o sul sito e/o collegate alla fornitura di un particolare servizio.</li>
-        <li>soggetti che debbano avere accesso ai dati, come da norme di legge o di normative secondarie e/o comunitarie.</li>
+ -->        <li>soggetti che debbano avere accesso ai dati, come da norme di legge o di normative secondarie e/o comunitarie.</li>
     </ul>
 </div>
 <h3>Diritti dell'interessato</h3>
@@ -96,10 +98,10 @@
     <li><b><span id="azienda">University of Verona</span></b></li>
     <li id="piva" style="display: block;">P. IVA <span id="iva">01541040232</span></li>
     <li id="codiceFiscale" style="display: block;">Codice Fiscale: <span id="codice_Fiscale">93009870234</span></li>
-    <li><span id="indirizzo">strada delle grazie 15</span></li>
+    <li><span id="indirizzo">Via dell'Artigliere, 8</span></li>
     <li><span id="cap">37129</span> - <span id="citta">Verona</span> (<span id="provincia">Other</span>)</li>
     <li>Tel/Fax: <span id="telefono">0458027068</span></li>
-    <li>E-mail: <span id="email">giacomo.marchioro@univr.it</span></li>
+    <li>E-mail gestore del sito: <span id="email">giacomo.marchioro@univr.it</span></li>
 </ul>
 <p>Per esercitare i diritti previsti all'art. 7 del Codice della Privacy ovvero per la cancellazione dei vostri dati dall'archivio, è sufficiente contattarci attraverso uno dei canali messi a disposizione.</p>
 <p>Tutti i dati sono protetti attraverso l'uso di antivirus, firewall e protezione attraverso password.</p>
@@ -108,5 +110,5 @@
 <p>Questa politica sulla privacy si applica solo alle nostre attività online ed è valida per i visitatori del nostro sito web e per quanto riguarda le informazioni condivise e/o raccolte. Questa politica non si applica a qualsiasi informazione raccolta in modalità offline o tramite canali diversi da questo sito web.</p>
 <h3>Consenso</h3>
 <p>Usando il nostro sito web, acconsenti alla nostra politica sulla privacy e accetti i suoi termini. Se desideri ulteriori informazioni o hai domande sulla nostra politica sulla privacy non esitare a contattarci.</p>
-
+</section>  
 {% endblock body %}
