--- a/templates/prodottidellaricerca.html
+++ b/templates/prodottidellaricerca.html
@@ -37,13 +37,13 @@
             <div class="row align-items-center container py-5 mx-auto">
 
             <div class="text col-lg-6 col-md-12 col-12">
-                <h6>ZENODO COMUNITY</h6>
+                <h6>ZENODO COMMUNITY</h6>
                 <h1>Prodotti open-access</h1>
                 <p>
                     Molti dei nostri prodotti di ricerca sono ospitati su <a href="https://about.zenodo.org/">Zenodo</a>. 
                 </p>
                 <p>
-                    La nostra <a href="https://zenodo.org/communities/bibliotecacapitolareveronaunivr/?page=1&size=20">comunity di Zenodo</a> offre l'accesso ed il download 
+                    La nostra <a href="https://zenodo.org/communities/bibliotecacapitolareveronaunivr/?page=1&size=20">community di Zenodo</a> offre l'accesso ed il download 
                     di diversi contenuti open-access facilmente citabili dagli utilizzatori finali.
                 </p>
                 <p>
@@ -59,8 +59,7 @@
               </div>
             </div>
         </section>
-        <section id="zotero" class="illaboratorio   py-5 ">
-        <section id="telepace" class="storia  py-5 ">
+        <section id="zotero" class="illaboratorio bg-white  py-5 ">
             <div class="row align-items-center container py-5 mx-auto">
 
             <div class="text col-lg-6 col-md-12 col-12">
