--- a/templates/about.html
+++ b/templates/about.html
@@ -1,14 +1,14 @@
 {% extends 'layout.html' %}
 {% block  body%}
 
-<div class="container withnavbar">
+<div class="container withnavbar" id="content">
     <br>
     <div class="row">
         <div class="sidenav">
             <p><b>Indice:</b></p>
             <a href="#scopo">Scopo</a>
             <a href="#storia">Storia del progetto</a>
-            <a href="#illaboratorio">Il laboraotorio</a>
+            <a href="#illaboratorio">Il laboratorio</a>
             <a href="#lasalacons">La sala consultazione</a>
      
         </div>
@@ -24,7 +24,7 @@
             </p> -->
         </section>
         </div>
-        <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=17AS0VmzVTH5n04pYBGr_E0vEuRFV87MkfrjzQk6zxg4&font=Default&lang=it&timenav_position=top&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>        
+        <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=17AS0VmzVTH5n04pYBGr_E0vEuRFV87MkfrjzQk6zxg4&font=Default&lang=it&timenav_position=top&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0' title='Time line interattiva'></iframe>        
         <section id="storia" class="storia  py-5 ">
             <div class="row align-items-center container py-5 mx-auto">
             <div class="text col-lg-6 col-md-12 col-12">
@@ -49,7 +49,7 @@
               </div>
             <div class="img col-lg-6 col-md-12 col-12">
                 <div class="embed-responsive embed-responsive-4by3">
-                    <iframe class="embed-responsive-item" height="400px" width="100%" src="https://www.youtube.com/embed/q8U-DiZHVUg?start=44" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item" height="400px" width="100%" src="https://www.youtube.com/embed/q8U-DiZHVUg?start=44" title="YouTube video player intervista Prof. Pellegrini sul progetto Dascabida." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
             <div class="row align-items-center container py-5 mx-auto">
                 <div class="img col-lg-6 col-md-12 col-12">
                 <div class="embed-responsive embed-responsive-4by3">
-                    <iframe class="embed-responsive-item" width="400" height="315" src="https://www.youtube.com/embed/eKSemEt2PNk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item" width="400" height="315" src="https://www.youtube.com/embed/eKSemEt2PNk" title="YouTube video player con video intervista Prof. Sartor sulla convenzione. " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
                   <div class="text col-lg-6 col-md-12 col-12">
