--- a/templates/layoutBT2.html
+++ b/templates/layoutBT2.html
@@ -45,7 +45,7 @@
   </head>
 <!--         NAVBAR        -->
 {% include 'includes/navbar2.html' %}
-<body data-bs-offset="150" tabindex="0">
+<body data-bs-offset="150">
  <!--  <br> <br>
   <div class="alert alert-danger" role="alert">
     <p>
