Risistemta pagina progetto

--- a/templates/about.html
+++ b/templates/about.html
@@ -8,15 +8,17 @@
             <p><b>Indice:</b></p>
             <a href="#scopo">Scopo</a>
             <a href="#storia">Storia del progetto</a>
-            <a href="#illaboratorio">Il laboratorio</a>
             <a href="#lasalacons">La sala consultazione</a>
+            <a href="#convenzione">La convenzione</a>
+            <a href="#illaboratorio">Il laboratorio</a>
+           
      
         </div>
         <div class="col-md-7 col-sm-6">
-        <section id="scopo">
+        <section id="scopo" class="bg-white">
             <br>
             <h1>Scopo del portale Capitolar-e</h1><p>
-            Il progetto nasce dalla collaborazione tra gruppi di ricerca afferenti ai Dipartimenti di Culture e Civiltà e di Informatica dell’Università di Verona, il Sistema Bibliotecario di Ateneo e la Biblioteca Capitolare di Verona. L’insieme di queste competenze ha consentito di realizzare un portale il cui obiettivo primario corre lungo un duplice binario: a) catalogazione e digitalizzazione; b) diagnostica. Lo scopo del punto a) è mettere a disposizione di studiosi e ricercatori, in modalità open access, manoscritti e documenti della Biblioteca capitolare di Verona. Per far questo il progetto si articola su tre sezioni principali: 1) Catalogo digitale dei manoscritti, che offre sia le descrizioni dei codici realizzate secondo i più moderni standard di internazionali sia le immagini digitalizzate in HD degli stessi; 2) Inventario delle pergamene dell’Archivio capitolare complete di scheda descrittiva e di immagini digitalizzate; 3) Catalogo storico dei manoscritti condotto sulla base del vecchio catalogo a schede di don Antonio Spagnolo (vd. sezione dedicata) e collegato alle immagini dei manoscritti indicizzati. Obiettivo del punto b) è l’esami diagnosticio di codici e pergamene per verificarne lo stato di conservazione e per compiere il rilievo e la elaborazione di immagini di manufatti danneggiati e illeggibili. Ciò consentirà il recupero di materiali di straordinario valore sia per quanto attiene alla tradizione testuale di alcuni testi capitali per la cultura occidentale, sia per quanto riguarda documenti cruciali per la storia dell’istituzione. Sono inoltre previste una sezione 4) dedicata ai prodotti della ricerca, ossia alle pubblicazioni realizzate su diversi supporti e in diversi formati che costituiscono il frutto tangibile dell’attività del progetto; una sezione 5) che ospita i contributi alla divulgazione pubblicati sia in formato audio-video, attraverso filmati e interviste radio-televisive, sia attraverso gli organi della carta stampata.
+            Il progetto nasce dalla collaborazione tra gruppi di ricerca afferenti ai Dipartimenti di Culture e Civiltà e di Informatica dell’Università di Verona, il Sistema Bibliotecario di Ateneo e la Biblioteca Capitolare di Verona. L’insieme di queste competenze ha consentito di realizzare un portale il cui obiettivo primario corre lungo un duplice binario: a) catalogazione e digitalizzazione; b) diagnostica. Lo scopo del punto a) è mettere a disposizione di studiosi e ricercatori, in modalità open access, manoscritti e documenti della Biblioteca capitolare di Verona. Per far questo il progetto si articola su tre sezioni principali: 1) Catalogo digitale dei manoscritti, che offre sia le descrizioni dei codici realizzate secondo i più moderni standard di internazionali sia le immagini digitalizzate in HD degli stessi; 2) Inventario delle pergamene dell’Archivio capitolare complete di scheda descrittiva e di immagini digitalizzate; 3) Catalogo storico dei manoscritti condotto sulla base del vecchio catalogo a schede di don Antonio Spagnolo (vd. <a href="/esplora">sezione dedicata</a>) e collegato alle immagini dei manoscritti indicizzati. Obiettivo del punto b) è l’esami diagnosticio di codici e pergamene per verificarne lo stato di conservazione e per compiere il rilievo e la elaborazione di immagini di manufatti danneggiati e illeggibili. Ciò consentirà il recupero di materiali di straordinario valore sia per quanto attiene alla tradizione testuale di alcuni testi capitali per la cultura occidentale, sia per quanto riguarda documenti cruciali per la storia dell’istituzione. Sono inoltre previste una sezione 4) dedicata ai prodotti della ricerca, ossia alle pubblicazioni realizzate su diversi supporti e in diversi formati che costituiscono il frutto tangibile dell’attività del progetto; una sezione 5) che ospita i contributi alla divulgazione pubblicati sia in formato audio-video, attraverso filmati e interviste radio-televisive, sia attraverso gli organi della carta stampata.
             </p>
             <!-- <p>
             Per avere informazioni più dettagliate per la visita della Biblioteca Capitolare e del museo diocesano,
@@ -41,9 +43,7 @@
                         crescendo, investendo dunque anche il Complesso dell’Archivio del Capitolo. Per la sua realizzazione 
                         del progetto furono acquistati hardware, software, supporti per l’archiviazione di metadati, 
                         attrezzature fotografiche e di precisione che costituirono il primo nucleo del Laboratorio, 
-                        inizialmente collocato in una stanza attigua al salone Arcidiacono Pacifico e appositamente allestita. I primi, incoraggianti risultati del progetto hanno indotto l’Ateneo, con delibera del Consiglio di Amministrazione del 1 febbraio 2019, a investire ulteriori ingenti risorse per l’acquisto di strumentazione più performante e per assicurare il personale necessario a supporto delle attività di ricerca: il progetto DascabiDa è così confluito nel neonato Laboratorio di studi Medievali e Danteschi (LaMeDan) del Dipartimento di Culture e Civiltà.
-                        Con la fattiva collaborazione del Sistema Bibliotecario di Ateneo e dell’Ufficio Tecnico dell’Università di Verona, è stata quindi progettata una nuova sala consultazione all’interno della Biblioteca Capitolare, da realizzare al secondo piano dell’edificio che già ospitava la vecchia sala, accanto alla quale sarebbe sorto il nuovo Laboratorio di diagnostica e digitalizzazione. 
-                        
+                        inizialmente collocato in una stanza attigua al salone Arcidiacono Pacifico e appositamente allestita. 
      
                         </p>
               </div>
@@ -54,23 +54,43 @@
                 </div>
             </div>
           </section>
-
-        <section id="convenzione" class="illaboratorio  py-5 ">
+          
+          <section id="lasalacons" class="illaboratorio  py-5 ">
             <div class="row align-items-center container py-5 mx-auto">
                 <div class="img col-lg-6 col-md-12 col-12">
-                <div class="embed-responsive embed-responsive-4by3">
-                    <iframe class="embed-responsive-item" width="400" height="315" src="https://www.youtube.com/embed/eKSemEt2PNk" title="YouTube video player con video intervista Prof. Sartor sulla convenzione. " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-            </div>
+                    <img class="img-fluid" src={{url_for('static',filename='imgs/salaconsult.jpeg')}} alt="Immagine del laboratorio, e del sistema di digitalizzazione.">   
+                  </div>
                   <div class="text col-lg-6 col-md-12 col-12">
+                    <h6>STUDIARE I CODICI</h6>
+                    <h1>La nuova sala consultazione</h1>
                     <p>
-                        A tale scopo l’Università di Verona, in data 19 marzo 2019, ha stipulato con il Capitolo della Cattedrale una <a href=https://www.univrmagazine.it/2019/03/19/firmata-la-convenzione-tra-universita-di-verona-e-biblioteca-capitolare/>convenzione</a> quinquennale che assicura la collaborazione tra 
-                        le due istituzioni. La nuova sala consultazione e il nuovo laboratorio sono stati portati a termine in tempi record, attrezzati secondo tutti gli standard di sicurezza e funzionalità richiesti dalla normativa vigente, con un collegamento internet veloce direttamente connesso alla rete e alle banche dati di Ateneo messi 
-                        gratuitamente a disposizione di tutti gli utenti che si registreranno presso la sala consultazione stessa. Il progetto vede attualmente impegnati, oltre ai docenti del LaMeDan (afferenti ai due dipartimenti di Culture e Civilità e di Informatica), un tecnologo, un bibliotecario dell’Università di Verona, due assegnisti di ricerca e una dottoranda, che collaborano a vario titolo nella gestione degli strumenti del Laboratorio e del sito web, e nella descrizione dei manoscritti e dei documenti dell’archivio.
-                    </p>
+                        I primi, incoraggianti risultati del progetto hanno indotto l’Ateneo, con delibera del Consiglio di Amministrazione del 1 febbraio 2019, a investire ulteriori ingenti risorse per l’acquisto di strumentazione più performante e per assicurare il personale necessario a supporto delle attività di ricerca: il progetto DascabiDa è così confluito nel neonato Laboratorio di studi Medievali e Danteschi (LaMeDan) del Dipartimento di Culture e Civiltà.
+                    Con la fattiva collaborazione del Sistema Bibliotecario di Ateneo e dell’Ufficio Tecnico dell’Università di Verona, è stata quindi progettata una nuova sala consultazione all’interno della Biblioteca Capitolare, da realizzare al secondo piano dell’edificio che già ospitava la vecchia sala, accanto alla quale sarebbe sorto il nuovo Laboratorio di diagnostica e digitalizzazione. 
+                    
+                        </p>
                   </div>
                 </div>
               </section>
+
+          <section id="convenzione" class="illaboratorio  py-5 ">
+            <div class="row align-items-center container py-5 mx-auto">
+                <div class="text col-lg-6 col-md-12 col-12">
+                    <h6>INSIEME PER SALVAGUARDARE IL PATRIMONIO</h6>
+                    <h1>La convenzione</h1>
+                        <p>
+                            A tale scopo l’Università di Verona, in data 19 marzo 2019, ha stipulato con il Capitolo della Cattedrale una <a href=https://www.univrmagazine.it/2019/03/19/firmata-la-convenzione-tra-universita-di-verona-e-biblioteca-capitolare/>convenzione</a> quinquennale che assicura la collaborazione tra 
+                            le due istituzioni. La nuova sala consultazione e il nuovo laboratorio sono stati portati a termine in tempi record, attrezzati secondo tutti gli standard di sicurezza e funzionalità richiesti dalla normativa vigente, con un collegamento internet veloce direttamente connesso alla rete e alle banche dati di Ateneo messi 
+                            gratuitamente a disposizione di tutti gli utenti che si registreranno presso la sala consultazione stessa. Il progetto vede attualmente impegnati, oltre ai docenti del LaMeDan (afferenti ai due dipartimenti di Culture e Civilità e di Informatica), un tecnologo, un bibliotecario dell’Università di Verona, due assegnisti di ricerca e una dottoranda, che collaborano a vario titolo nella gestione degli strumenti del Laboratorio e del sito web, e nella descrizione dei manoscritti e dei documenti dell’archivio.
+                        </p>
+                </div>
+                <div class="img col-lg-6 col-md-12 col-12">
+                    <div class="embed-responsive embed-responsive-4by3">
+                        <iframe class="embed-responsive-item" width="400" height="315" src="https://www.youtube.com/embed/eKSemEt2PNk" title="YouTube video player con video intervista Prof. Sartor sulla convenzione. " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+            </section>
+
         <section id="illaboratorio" class="illaboratorio  py-5 ">
             <div class="row align-items-center container py-5 mx-auto">
                 <div class="img col-lg-6 col-md-12 col-12">
@@ -79,35 +99,18 @@
                   <div class="text col-lg-6 col-md-12 col-12">
                     <h6>ANALIZZARE E DIGIALIZZARE I CODICI</h6>
                     <h1>Il laboratorio</h1>
-                    <p>
-                        L'Università dispone non solo di spazi virtuali ma anche di spazi fisici all'interno della biblioteca. La Biblioteca Capitolare
-                        ospita, diversi locali gestiti dal laboratorio LaMeDan per la riproduzione,
-                        analisi e consultazione dei beni.
-                        </p>
                         <p>
                         Il laboratorio di analisi dei beni librari contiene strumentazione all'avanguardia per l'analisi
                         e la digitalizzazione dei beni culturali. Gli strumenti consentono non solo di digitalizzare ad
                         altissima risoluzione i beni della collezione, ma anche di indagarne lo stato conservativo e 
                         la tecnica esecutiva.
                         Di fondamentale importanza anche le analisi multispettrali che consentono spesso di rivelare
-                        testo ormai illegibile. Maggiori informazioni sugli strumenti possono essere trovate nella <a href='/strumenti'>pagina dedicata</a>.
+                         testo ormai illegibile. <!-- Maggiori informazioni sugli strumenti possono essere trovate nella <a href='/strumenti'>pagina dedicata</a>. -->
                         </p>
                   </div>
                 </div>
               </section>
 
-        <section id="lasalacons">
-            <h3>La sala consultazione.</h3>
-            <p>
-            Un'altro spazio fondamentale concesso all'Università di Verona è la sala consultazione.
-            Dove gli studiosi hanno la possibilità di consultare i materiali in sicurezza.
-            Accedendo ai servizi del sistema bibliotecario di ateneo e ad una connessione veloce
-            con i server che ospitano la digital-library del progetto.
-            </p>
-            <p>
- 
-            </p>
-         </section>
         <div>
     </div>
 </div>
