Nuovo template risutlati

--- a/templates/about.html
+++ b/templates/about.html
@@ -73,7 +73,7 @@
               </section>
 
           <section id="convenzione" class="illaboratorio  py-5 ">
-            <div class="row align-items-center container py-5 mx-auto">
+            <div class="row align-items-center container py-5 mx-auto bg-white">
                 <div class="text col-lg-6 col-md-12 col-12">
                     <h6>INSIEME PER SALVAGUARDARE IL PATRIMONIO</h6>
                     <h1>La convenzione</h1>
