--- a/templates/risultati2_old.html
+++ b/templates/risultati2_old.html
@@ -3,47 +3,16 @@
 
 <br>
 
-<div class="manbanner" id="manbannerreg">
+<div class="manbanner">
   <img src="{{codice['immagine_banner']}}" class="img-fluid mb5" id="imgmanu">
   <div class="mantext">{{codice['descrizione_esterna'][0]['Segnatura']}}</div>
 </div>
-  <div class="container py-3 px-0" id="scheda">
+  <div class="container py-3 px-0">
     <div class="row">
-      <div class="col-md col-lg order-sm-last">
-
-        <div class="alert alert-info" role="alert">
-          <p>
-          <b>Autore della scheda:</b>
-        {% if codice['descrizione_esterna'] %}
-              {% for field in codice['descrizione_esterna'] %}
-               {{field['utenti_email']}} 
-               {% endfor %} 
-        {% endif %} 
-        <br>  
-        <b>Ultima modifica:</b> {{codice['last_modified']}} 
-      </p>
-      {% if 'sommario_desc' in codice.keys() %}
-               {{codice['sommario_desc']}} 
-        {% endif %} 
-        </div>
-
-        
-        
-        
-  
-         <div class="menu sticky-top p-3 bg-light py-5">
-          <br>
-          <br>
-          <h5 class="text-primary">Navigazione:</h5>
-          <div class="nav flex-column">
-              <a href="#manbannerreg"> Torna all'inizio. </a>
-          </div>
-      </div>
-      </div>
-    <div class="col-2 py-5">
+    <div class="col-2 col-sm-2">
         <img src="{{codice['immagine_dorso']}}"  class="rounded d-block" >
     </div>
-    <div class="col" style="min-width: 450px;">
+    <div class="col-7 col-sm-8">
 
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
@@ -82,6 +51,7 @@
             <tr><td><b>Rigatura: </b></td><td>{{field['rigatura']}}</td></tr>
             <tr><td><b>Foratura: </b></td><td>{{field['foratura']}}</td></tr>
             <tr><td><b>Legatura: </b></td><td>{{field['legatura']}}</td></tr>
+            <tr><td><b>Utente: </b></td><td>{{field['utenti_email']}}</td></tr>
             <tr><td><b>Palinsesto: </b></td><td>{{field['Descrizione_Esterna_Segnatura']}}</td></tr>
         </table>
         </span>
@@ -429,20 +399,31 @@ for (i = 0; i < acc.length; i++) {
 </script>
         
             </div>
-        <div class="tab-pane fade bg-light" id="Fac-similes" role="tabpanel" aria-labelledby="profile-tab">
+        <div class="tab-pane fade" id="Fac-similes" role="tabpanel" aria-labelledby="profile-tab">
             <table>
             <tr>
             <tr><td><b>Tipologia:</b></td><td>Copia digitale</td></tr>
             <tr><td><b>Manifest:</b></td><td><a href="default_target?manifest={{codice['manifest']}}" target="_blank">
               <img src={{url_for('static', filename="imgs/iiificon.png")}} alt="IIIF Drag-n-drop"/>
-            </a><a href={{codice['manifest']}} class="manifesturl"><div class="text-break">{{codice['manifest']}}</div></a></td></tr>
+            </a> <a href={{codice['manifest']}} class="manifesturl">{{codice['manifest']}}</a></td></tr>
             <tr><td><b>Visualizzabile con:</b></td><td> <a href=http://lezioni.meneghetti.univr.it/UVjs/?manifest={{codice['manifest']}} target="_blank">Universal viewer</a> <a href=http://lezioni.meneghetti.univr.it/m3/?manifest={{codice['manifest']}} target="_blank">Mirador</a>  </td></tr>
         </table>
         </div>
         <div class="tab-pane fade" id="analisi" role="tabpanel" aria-labelledby="analisi-tab">...</div>
         </div>
     </div>
+    <div class="col-sm-2 order-1">
+      This booklet contains a collection of recipes for producing medications, 
+      home remedies and foodstuffs. The presentation of the recipes ranges from 
+      lists of ingredients to detailed texts that describe the processing of the 
+      ingredients. The manuscript does not have an index. A page from a manuscript - 
+      probably 14th century - serves as book cover. Its visible text is about the 
+      geometry of triangles (De triangulo). In the first half of the 20th century, 
+      the book was purchased at the bookstore Helbing & Lichtenhahn by Theo Baeschlin
+       and then donated to the Pharmaceutical Institute of Basel. (wan)
 
+ 
+    </div>
     </div>
 </div>
 
