--- a/templates/risultati2.html
+++ b/templates/risultati2.html
@@ -110,8 +110,8 @@
             <tr class="resultstr"><td><b>Carte: </b></td><td>{{field['carte']}}</td></tr>
             <tr class="resultstr"><td><b>Autore: </b></td><td>{{field['autore']}}</td></tr>
             <tr class="resultstr"><td><b>Titolo: </b></td><td>{{field['titolo']}}</td></tr>
-            <tr class="resultstr"><td><b>Rubrica: </b></td><td>{{field['rubrica']}}</td></tr>
-            <tr class="resultstr"><td><b>Incipit: </b></td><td>{{field['incipit']}}  {% if field['incipit_url'] != "Non disponibile" %}<a href={{field['incipit_url']}} target="_blank">&#x1F4F7;</a>{% endif %} </td></tr>
+            <tr class="resultstr"><td><b>Rubrica: </b></td><td>{{field['rubrica']}} {% if field['incipit_url'] != "Non disponibile" %}<a href={{field['incipit_url']}} target="_blank">&#x1F4F7;</a>{% endif %} </td></tr>
+            <tr class="resultstr"><td><b>Incipit: </b></td><td>{{field['incipit']}}</td></tr>
             <tr class="resultstr"><td><b>Explicit: </b></td><td>{{field['explicit']}}</td></tr>
             <tr class="resultstr"><td><b>Testo di riferimento(segnatura): </b></td><td>{{field['Descrizione_Esterna_Segnatura']}}</td></tr>
         </table><hr><br>
@@ -429,7 +429,7 @@ for (i = 0; i < acc.length; i++) {
 </script>
         
             </div>
-        <div class="tab-pane fade bg-light" id="Fac-similes" role="tabpanel" aria-labelledby="profile-tab">
+        <div class="tab-pane fade bg-lightd" id="Fac-similes" role="tabpanel" aria-labelledby="profile-tab">
             <table>
             <tr>
             <tr><td><b>Tipologia:</b></td><td>Copia digitale</td></tr>
