--- a/templates/risultati2.html
+++ b/templates/risultati2.html
@@ -36,14 +36,14 @@
           <br>
           <h5 class="text-primary">Navigazione:</h5>
           <div class="nav flex-column">
-              <a href="#manbannerreg"> Torna all'inizio. </a>
+              <a href="#manbannerreg"> Vai alle schede.</a>
           </div>
       </div>
       </div>
     <div class="col-2 py-5">
         <img src="{{codice['immagine_dorso']}}"  class="rounded d-block" >
     </div>
-    <div class="col" style="min-width: 450px;">
+    <div class="col" style="min-width: 320px;">
 
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
